log
Fri Apr 22 15:30:55 UTC 2022: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
29e171f
Fri Apr 22 15:44:55 UTC 2022: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|7
total_score: 5/70
030d9a5
Fri Apr 22 15:57:54 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
e99de0f
Fri Apr 22 16:07:49 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
7007960
Fri Apr 22 16:21:11 UTC 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
31bc4cc
Sun Apr 24 19:10:04 UTC 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
ef7c7bb
Sun Apr 24 20:27:48 UTC 2022: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘nextTreeMap’:
treemap.c:105:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
     treeNode aux = tree->current->right;
     ^~~~~~~~
     TreeNode
treemap.c:105:20: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     treeNode aux = tree->current->right;
                    ^~~~
treemap.c:106:14: error: invalid type argument of ‘->’ (have ‘int’)
     while(aux->left != NULL){
              ^~
treemap.c:107:16: error: invalid type argument of ‘->’ (have ‘int’)
       aux = aux->left;
                ^~
treemap.c:109:19: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     tree->current = aux;
                   ^
treemap.c:110:15: error: invalid type argument of ‘->’ (have ‘int’)
     return aux->pair;
               ^~
treemap.c:112:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
     treeNode aux = tree->current->parent;
     ^~~~~~~~
     TreeNode
treemap.c:112:20: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     treeNode aux = tree->current->parent;
                    ^~~~
treemap.c:113:16: error: comparison between pointer and integer [-Werror]
     while (aux < tree->current){
                ^
treemap.c:114:16: error: invalid type argument of ‘->’ (have ‘int’)
       aux = aux->parent;
                ^~
treemap.c:116:19: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     tree->current = aux;
                   ^
treemap.c:117:15: error: invalid type argument of ‘->’ (have ‘int’)
     return aux->pair;
               ^~
treemap.c:119:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
6d62241
Sun Apr 24 20:28:12 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘nextTreeMap’:
treemap.c:105:20: error: invalid initializer
     TreeNode aux = tree->current->right;
                    ^~~~
treemap.c:106:14: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     while(aux->left != NULL){
              ^~
treemap.c:107:16: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       aux = aux->left;
                ^~
treemap.c:109:19: error: incompatible types when assigning to type ‘TreeNode * {aka struct TreeNode *}’ from type ‘TreeNode {aka struct TreeNode}’
     tree->current = aux;
                   ^
treemap.c:110:15: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     return aux->pair;
               ^~
treemap.c:112:20: error: invalid initializer
     TreeNode aux = tree->current->parent;
                    ^~~~
treemap.c:113:16: error: invalid operands to binary < (have ‘TreeNode {aka struct TreeNode}’ and ‘TreeNode * {aka struct TreeNode *}’)
     while (aux < tree->current){
                ^ ~~~~~~~~~~~~~
treemap.c:114:16: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       aux = aux->parent;
                ^~
treemap.c:116:19: error: incompatible types when assigning to type ‘TreeNode * {aka struct TreeNode *}’ from type ‘TreeNode {aka struct TreeNode}’
     tree->current = aux;
                   ^
treemap.c:117:15: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     return aux->pair;
               ^~
treemap.c:119:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
624a661
Sun Apr 24 20:32:12 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ac20ff8
Sun Apr 24 20:32:59 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fab4cfc
Sun Apr 24 20:51:35 UTC 2022: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
0c7a207
Sun Apr 24 21:54:25 UTC 2022: 
 treemap.c | 23 +++++++++++------------
 1 file changed, 11 insertions(+), 12 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘nextTreeMap’:
treemap.c:106:21: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Werror=implicit-function-declaration]
     tree->current = minimun(aux->right);
                     ^~~~~~~
                     minimum
treemap.c:106:29: error: ‘aux’ undeclared (first use in this function)
     tree->current = minimun(aux->right);
                             ^~~
treemap.c:106:29: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
7c96164
Sun Apr 24 21:55:14 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘nextTreeMap’:
treemap.c:106:29: error: ‘aux’ undeclared (first use in this function)
     tree->current = minimum(aux->right);
                             ^~~
treemap.c:106:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9715790
Sun Apr 24 21:55:33 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|5
total_score: 20/70
3a43d40
Sun Apr 24 21:56:33 UTC 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  16|5
total_score: 20/70
d83b5e2
Sun Apr 24 23:13:05 UTC 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘firstTreeMap’:
treemap.c:100:19: error: invalid initializer
   TreeNode node = tree->root;
                   ^~~~
treemap.c:102:18: error: incompatible type for argument 1 of ‘minimum’
   return minimum(node)->pair;
                  ^~~~
treemap.c:51:12: note: expected ‘TreeNode * {aka struct TreeNode *}’ but argument is of type ‘TreeNode {aka struct TreeNode}’
 TreeNode * minimum(TreeNode * x){
            ^~~~~~~
treemap.c:103:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
bac068e
Sun Apr 24 23:13:22 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|4
total_score: 25/70
27476c1
Mon Apr 25 00:11:33 UTC 2022: 
 treemap.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: unused variable ‘aux’ [-Werror=unused-variable]
     TreeNode * aux = tree->root;
                ^~~
cc1: all warnings being treated as errors
Compilation failed
aefbe39
Mon Apr 25 00:11:57 UTC 2022: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  15|4
total_score: 20/70
84427fe
Mon Apr 25 00:19:32 UTC 2022: 
 treemap.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  20|3
total_score: 35/70
7d39f86
